2002-12-14  Daniel Elstner  <daniel.elstner@gmx.net>

	* bootstrap.py (_normal): Use 'tput sgr0' instead of 'tput rmso'
	to fix bold uglyness, as already done in module.py.

2002-12-14  James Henstridge  <james@daa.com.au>

	* module.py (CVSModule.do_build): allow going to 'configure' state
	if build fails.

	* bootstrap.py (bootstraps): update libtool to 1.4.3.

	* moduleinfo.py (gnome22.glimmer): depend on libgnomeprint-2.0
	(gnome22.startup-notification): add libsnot.
	(gnome22.gnome-terminal): remove libzvt from list of deps.

2002-12-13  Thomas Vander Stichele <thomas at apestaart dot org>

	* moduleinfo.py  (gnome22): add nautilus-media.

2002-12-13  Daniel Elstner  <daniel.elstner@gmx.net>

	* moduleinfo.py: Add new module for regexxer. (#99780)

2002-12-12  James Henstridge  <james@daa.com.au>

	* module.py (CVSModule.do_configure): fix bug.

	* bootstrap.py (bootstraps): update versions of bootstraps.
	Autoconf up to 2.57, Automake-1.7 up to 1.7.2 and gettext up to
	0.11.5.

	* moduleinfo.py (gnome2): add scrollkeeper as a dep of various
	modules.
	(gnome20.scrollkeeper): require intltool.  scrollkeeper checks for
	it, even though it distributes its own version of it.
	(gnome20.devhelp): require libgsf (from bug #100177).

	* bootstrap.py (bootstraps): remove scrollkeeper from list of
	bootstraps.

	* moduleinfo.py (gnome20.scrollkeeper): add scrollkeeper as a
	Tarball type package, with libxml2 and libxslt as dependencies.

	* module.py (Tarball): another Package type, pulling most of the
	logic from bootstrap.py.  Can fit into dependency chains with CVS
	modules.  Not being used yet.
	(Tarball.do_install): add a little build stamp when install has
	completed.
	(Tarball.do_start): if jhbuild-build-stamp exists, skip build.

2002-12-11  James Henstridge  <james@daa.com.au>

	* cvs.py (CVSRoot.update): fix up call to self.checkout.

	* moduleinfo.py (gnome22): add modules for the gnome 2.0 versions