@@ -1,3 +1,15 @@
+2002-12-16  James Henstridge  <james@daa.com.au>
+
+	* jhbuild.py (do_dot): allow user to run "jhbuild dot" to print a
+	dot file that can be processed with graphviz to produce a nice
+	directed graph of what will be built.
+
+	* module.py (ModuleSet.write_dot): function to write out a dot
+	file for use with graphviz.
+
+	* moduleinfo.py (gnome22): add fontilus and sodipodi (although
+	sodipodi doesn't seem to want to build yet ...)
+
 2002-12-14  Daniel Elstner  <daniel.elstner@gmx.net>
 
 	* bootstrap.py (_normal): Use 'tput sgr0' instead of 'tput rmso'
